# tle-generator

./: .gitignore  README.md  configuration.ini-dist  desig.txt  ingest.py  init_paths.py  mcmc.py  preprocess.py  propagate.py  read_iod.py  requirements.txt  residuals.py  satfit.py  setup.cfg  sites.txt  update_desig.py
docs/: tle-generator-flow-v3.drawio
elements/: 37386.txt
tlegenerator/: database.py  formats.py  iod.py  observation.py  optimize.py  twoline.py  update.py
tlegenerator/cli/: ingest.py  mcmc.py  preprocess.py  residuals.py  satfit.py
