[metadata]
name = tlegenerator
version = 0.1
description = A Python package to generate two-line elements (TLEs) from (visual) observations
long_description = file: README.md
long_description_content_type = text/markdown
author = Cees Bassa
license = GPLv3 or later
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3 :: Only
project_urls =
	Source = https://github.com/cbassa/tle-generator
    Bug Tracker = https://github.com/cbassa/tle-generator/issues

[options]
packages = find:
install_requires =
    astropy~=5.1
    matplotlib~=3.5.3
    numpy~=1.23.2
    scipy~=1.9.0
    sgp4~=2.21
    spacetrack~=0.16.0

[options.entry_points]
console_scripts =
    ingest = tlegenerator.cli.ingest:main
    preprocess = tlegenerator.cli.preprocess:main
    residuals = tlegenerator.cli.residuals:main

[options.packages.find]
exclude = tests
