[metadata]
name = tlegenerator
version = 0.1
description = A Python package to generate two-line elements (TLEs) from (visual) observations
long_description = file: README.md
long_description_content_type = text/markdown
author = Cees Bassa
license = GPLv3 or later
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3 :: Only
project_urls =
	Source = https://github.com/cbassa/tle-generator
    Bug Tracker = https://github.com/cbassa/tle-generator/issues

[options]
packages = find:
install_requires =
    astropy~=5.1
    matplotlib~=3.5.3
    numpy~=1.23.2
    scipy~=1.9.0
    sgp4~=2.21
    spacetrack~=0.16.0

[options.extras_require]
mcmc =
    corner~=2.2.1
    emcee~=3.1.2
    tqdm~=4.64.0

[options.entry_points]
console_scripts =
    tg_ingest = tlegenerator.cli.ingest:main
    tg_preprocess = tlegenerator.cli.preprocess:main
    tg_residuals = tlegenerator.cli.residuals:main
    tg_satfit = tlegenerator.cli.satfit:main
    tg_mcmc = tlegenerator.cli.mcmc:main

[options.packages.find]
exclude = tests
